[gd_scene load_steps=6 format=3 uid="uid://c1tbh0vi8hiu5"]

[ext_resource type="Script" uid="uid://b676224m7exg3" path="res://addons/SolanaSDK/Dialogs/create_token.gd" id="1_l63xx"]
[ext_resource type="PackedScene" uid="uid://pxcyr743odre" path="res://addons/SolanaSDK/Scenes/RpcSelector.tscn" id="2_1i5s0"]
[ext_resource type="PackedScene" uid="uid://c2tjm60ff3qtf" path="res://addons/SolanaSDK/Scenes/KeypairSelector.tscn" id="2_e8fif"]
[ext_resource type="PackedScene" uid="uid://f8ayiyhqtnvl" path="res://addons/SolanaSDK/Scenes/TransactionSimulator.tscn" id="4_qgec0"]
[ext_resource type="PackedScene" uid="uid://cc0u53vfjbrea" path="res://addons/SolanaSDK/Scenes/TransactionSender.tscn" id="5_hhwt3"]

[node name="CreateToken" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l63xx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12941177, 0.14901961, 0.18039216, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RpcSelector" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_1i5s0")]
layout_mode = 2
size_flags_horizontal = 10

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Token Program:"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Token2022"
popup/item_0/id = 0
popup/item_1/text = "Token"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Mint Keypair"

[node name="KeypairSelector" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_e8fif")]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Payer/Authority Keypair"

[node name="KeypairSelector2" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_e8fif")]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.87058824, 0.4, 1)
text = "- No valid token keypair selected
- No valid authority selected
"

[node name="TransactionSimulator" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_qgec0")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SimulateButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Simulate"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Create"

[node name="TransactionSender" parent="MarginContainer/VBoxContainer" instance=ExtResource("5_hhwt3")]
layout_mode = 2

[node name="Transaction" type="Transaction" parent="."]

[node name="SolanaClient" type="SolanaClient" parent="."]

[connection signal="invalid_keypair_selected" from="MarginContainer/VBoxContainer/KeypairSelector" to="." method="_on_keypair_selector_invalid_keypair_selected"]
[connection signal="keypair_updated" from="MarginContainer/VBoxContainer/KeypairSelector" to="." method="update_todo"]
[connection signal="invalid_keypair_selected" from="MarginContainer/VBoxContainer/KeypairSelector2" to="." method="_on_keypair_selector_2_invalid_keypair_selected"]
[connection signal="keypair_updated" from="MarginContainer/VBoxContainer/KeypairSelector2" to="." method="update_todo"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SimulateButton" to="." method="_on_simulate_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
